# kprop_testing

./: .gitignore  EXPERIMENTS.md  README.md  experiments.py  pyproject.toml  pytest.ini  requirements.txt  utils.py
Mecha_preds/: __init__.py
Mecha_preds/cumulants/: __init__.py  adapter.py  metrics.py  plotting.py  run_comparison.py
analysis/: __init__.py  attribution.py  common.py  pca.py  principal_directions_trained_to_0.py  probing.py
analysis/Tools/: __init__.py  ablation.py  common.py  patching.py  weight_structure.py
analysis/trained_to_0/: __init__.py  (+4 more)
checkpoints/: zero_d2_w256_seed0_final.pt  zero_d2_w64_seed0_final.pt  zero_d3_w128_seed0_final.pt
colab_notebooks/: 02_analyze_to_zero.ipynb  _nb.py  build_exact_scaling_notebook.py  exact_relu_k2_width_scaling_colab.ipynb
cumulant_experiments/: README.md  cumulant_adapter.py  metrics.py  model_utils.py  plotting.py
experiments/: kprop_width_scaling.py  run_cumulant_train_to_zero_mean.py
model/: __init__.py  mlp.py
notebooks/: build_exact_scaling_notebook.py  build_notebook.py  cumulant_experiments_colab.ipynb  exact_relu_k2_width_scaling_colab.ipynb
scripts/: form_df.py  kprop_by_width.py  plot.py
tasks/: __init__.py  base.py  distillation.py  halfspace.py  train_to_zero.py
tests/: test_cumulants.py  test_diagslice.py  test_exact_relu_covariance.py  test_factor_k3.py  test_factor_k4.py  test_flop_utils.py  test_harmonic.py  test_kprop.py  test_mlp.py  test_partitions.py  test_relu_k2_exact.py  test_tensor_utils.py  test_wick.py
training/: __init__.py  parallel.py  run.py  trainer.py
(+148 files in other folders)
